<resources>
    <string name="app_name">AndroidAcademyProject</string>
    <string name="text_header">Нашёл. Увидел. Запилил</string>
    <string name="text_main_text">Я был впечатлен представленным Google IO Motion Layout, поэтому решил изучить его в бою и рассказать о практическом использовании вам. Я пошел на Dribbble.com и выбрал понравившуюся анимацию. Теперь я сделаю все, чтобы реализовать ее, используя MotionLayout, и расскажу о фичах и проблемах аудитории.</string>
    <string name="text_author">Константин Цховребов</string>
    <string name="text_report">ВСЕ ДОКЛАДЫ</string>
    <string name="text_android">Android</string>
    <string name="aut_post">Старший разработчик в Redmadrobot</string>
    <string name="aut_city">Санкт-Петербург, Россия</string>
    <string name="aut_review">Константин окончил СПбГПУ, увлекался микроконтроллерами и схемотехникой. Он начал программировать под Android с момента выпуска версии 2.2. Сегодня Костя является архитектором петербургской команды Redmadrobot.</string>
    <string name="text_time">17:45</string>
    <string name="text_date">27 Ноября</string>
    <string name="text_room">Аудитория</string>
    <string name="but_push_me">Push me</string>
</resources>
