<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="272dp"
    app:cardBackgroundColor="@color/Snow3"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="4dp"
    >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/report_item_tv_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textSize="31sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/report_item_tv_android"
            tools:text="@string/text_header"
            />

        <TextView
            android:id="@+id/report_item_tv_android"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/ic_rectangle_orange"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@id/report_item_bt_author"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/report_item_tv_header"
            tools:text="@string/text_android"
            />

        <TextView
            android:id="@+id/report_item_tv_room"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_margin="8dp"
            app:layout_constraintStart_toEndOf="@id/report_item_tv_android"
            app:layout_constraintTop_toTopOf="@id/report_item_tv_android"
            app:layout_constraintBottom_toBottomOf="@id/report_item_tv_android"
            tools:text="@string/text_room"
            />

        <Button
            android:id="@+id/report_item_bt_author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textSize="20sp"
            android:textColor="@color/DarkOrchid"
            android:background="@color/trans"
            android:textAllCaps="false"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/report_item_aut_tv_post"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/report_item_tv_android"
            tools:text="@string/text_author"/>

        <TextView
            android:id="@+id/report_item_aut_tv_post"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:lines="2"
            android:text="@string/aut_post"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/report_item_bt_author"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>
