<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:id="@+id/aut_sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Snow3"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            >

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/Snow3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/aut_tv_header"
                />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/aut_image_author"
                android:layout_width="0dp"
                android:layout_height="128dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/images"
                app:civ_border_width="2dp"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/aut_tv_author"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/text_author"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/aut_tv_post"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/aut_image_author"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/aut_tv_post"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/aut_post"
                android:textColor="@color/DarkOrchid"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/aut_tv_city"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/aut_image_author"
                app:layout_constraintTop_toBottomOf="@id/aut_tv_author"
                />

            <TextView
                android:id="@+id/aut_tv_city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/aut_city"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/aut_image_author"
                app:layout_constraintTop_toBottomOf="@id/aut_tv_post"
                />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="aut_tv_city, aut_image_author"
                />

            <TextView
                android:id="@+id/aut_tv_review"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/aut_review"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/barrier"
                />

            <TextView
                android:id="@+id/aut_tv_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/text_header"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/aut_tv_review"
                />

            <TextView
                android:id="@+id/aut_tv_room"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/text_room"
                android:textSize="25sp"
                app:layout_constraintBottom_toTopOf="@id/aut_tv_android"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/aut_tv_header"
                />

            <TextView
                android:id="@+id/aut_tv_android"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/ic_rectangle_orange"
                android:padding="8dp"
                android:text="@string/text_android"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:layout_constraintBottom_toTopOf="@id/aut_tv_time"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/aut_tv_room"
                />


            <TextView
                android:id="@+id/aut_tv_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/text_time"
                android:textSize="31sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/aut_tv_android"
                />

            <TextView
                android:id="@+id/aut_tv_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/text_date"
                android:textColor="@color/DarkOrchid"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="@id/aut_tv_time"
                app:layout_constraintStart_toEndOf="@id/aut_tv_time"
                app:layout_constraintTop_toTopOf="@id/aut_tv_time"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/aut_but_push"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:backgroundTintMode="screen"
                app:backgroundTint="@color/blue"
                app:icon="@drawable/ic_star_black_24dp"
                app:iconGravity="textEnd"
                app:iconSize="32dp"
                app:layout_constraintBottom_toBottomOf="@id/aut_tv_date"
                app:layout_constraintStart_toEndOf="@id/aut_tv_date"
                app:layout_constraintTop_toTopOf="@id/aut_tv_date"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/activity_main_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
</FrameLayout>